2007-10-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c (pause_command): Accept a string expression as the
	final parameter to "pause" commands.

2007-10-16  Ethan Merritt  <merritt@u.washington.edu>

	* INSTALL NEWS PORTING README configure.in configure.vms
	config/* docs/doc2texi.el docs/gpcard.tex docs/Makefile.in
	src/makefile.all src/makefile.awc src/term.h term/iris4d.trm
	term/vws.trm:

	Remove the long-obsolete IRIS4D terminal.  This terminal never was the
	preferred option even on a real IRIS4D (I had one!), and would no longer
	compile and link on SGI descendents of the IRIS4D as of 3 years ago.

	* docs/gnuplot.texi:  Sync to current gnuplot.doc

2007-10-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/eval.h src/eval.c (update_gpval_variables) src/util.c (int_error)
	src/unset.c (reset_command): Maintain error state variables.
	GPVAL_ERRNO is set to a non-zero value whenever an error occurs.
	GPVAL_ERRMSG holds the corresponding error message string.
	Both are reset by the new command 'reset errors'.

	* docs/gnuplot.doc: Revise the section on internal variables, adding
	mention of the new error state variables.

2007-10-11  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term): Fix stupid error that caused 
	'set term png <any options>' to fail.
	Bug #1810957

	* term/cairo.trm (cairotrm_options): Ignore "transparent" keyword when
	the output mode is pdf.

2007-10-10  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* term/cairo.trm (cairotrm_init): Do the sanity check for an existing
	*cairo terminal once and for all.
	Apply hinting in the pngcairo terminal: pngs are bitmapped, so they
	look much better with lines at integer positions.
	Also apply the "saturate" technique to get seamless polygons in pm3d
	mode.

2007-10-07  Ethan Merritt  <merritt@u.washington.edu>

	* term/cairo.trm:  Differentiate cairo png and pdf terminals.
	Set separate defaults for canvas size, font size, and linewidth.